--- a/index.html
+++ b/index.html
@@ -6,34 +6,14 @@
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site Oficial do Doutor Estranho!">
-    <meta name="keywords" content="Doutor Estranho,Doctor Strange,Doctor Strange Official,Doutor Estranho Oficial">
+    <meta name="keywords" content="Doutor Estranho,Doctor Strange,Doctor Strange Official,Doutor 
+    Estranho Oficial">
     <meta name="author" content="D0ctorStrange">
     <title>Doctor Strange Official</title>
     <link rel="stylesheet" href="index.css"
 
   </head>
   <body>
-
-    <h1>Doutor Estranho, O Mago Supremo</h1>
-    <p><strong>O Mago mais poderoso do cosmos<strong></p>
-    <p><h2>Pagina oficial do Doutor Estranho</h2></p>
-    <i>Sejam bem vindos a minha pagina mística!</i>
-    <hr>
-    Prezados exploradores da sabedoria, Cumprimentos a todos que chegaram até aqui. 
-    Eu sou o Doutor Estranho, o Mago Supremo, e é com grande satisfação que lhes dou as 
-    boas-vindas ao meu site!
-    <br>Ao cruzar os limites digital e adentrar este sagrado espaço, você se depara com um portal 
-    para as profundezas do conhecimento e do mistério. Onde as fronteiras entre a realidade e a 
-    magia se dissipam, e as respostas se escondem nas entranhas do universo. Vamos explorar os 
-    mistérios do universo, mergulhando no mundo místico junto comigo! Aqui, minha missão é compartilhar 
-    conhecimento e sabedoria arcana para ajudar a iluminar a mente de todos vocês. Preparem-se para 
-    se aventurar em assuntos fascinantes e complexos!
-
-    <p>Este site é destinado a todos os buscadores de conhecimento, sejam vocês seres humanos, 
-      feiticeiros ou até mesmo seres de outras dimensões. Juntos, vamos expandir nossa compreensão 
-      do universo e descobrir maravilhas inimagináveis.</P>
-
-
     <nav>
       <ul>
         <li>
@@ -47,5 +27,34 @@
         </li>
       </ul>
     </nav>
+
+    <h1>Doutor Estranho, O Mago Supremo</h1>
+    <p><strong>O Mago mais poderoso do cosmos<strong></p>
+    <p><h2>Pagina oficial do Doutor Estranho!</h2></p>
+    <i>Sejam bem vindos a minha pagina mística!</i>
+    
+    <p>Prezados exploradores da sabedoria, Cumprimentos a todos que chegaram até aqui. 
+    Eu sou o Doutor Estranho, o Mago Supremo, e é com grande satisfação que lhes dou as 
+    boas-vindas ao meu site!</p>
+    <hr>
+    <br>Ao cruzar os limites digital e adentrar este sagrado espaço, você se depara com um portal 
+    para as profundezas do conhecimento e do mistério. Onde as fronteiras entre a realidade e a 
+    magia se dissipam, e as respostas se escondem nas entranhas do universo. Vamos explorar os 
+    mistérios do universo, mergulhando no mundo místico junto comigo! Aqui, minha missão é compartilhar 
+    conhecimento e sabedoria arcana para ajudar a iluminar a mente de todos vocês. Preparem-se para 
+    se aventurar em assuntos fascinantes e complexos!
+
+    <p>Eu serei o guardião de ensinamentos ancestrais, oferencendoa você um vislumbre das antigas 
+      tradições místicas que atravessaram as eras. A verdadeira magia, aquela que transcede os meros 
+      truques de ilusionistas, será revelada em sua essência mais profundas, em seu propósito primórdial 
+      de equilibrío de equilibrío e harmonia com a existencia.
+    </p>
+    <p>Este site é destinado a todos os buscadores de conhecimento, sejam vocês seres humanos, 
+      feiticeiros ou até mesmo seres de outras dimensões. Juntos, vamos expandir nossa compreensão 
+      do universo e descobrir maravilhas inimagináveis.
+    </p>
+    
+
+
   </body>
 </html>
