--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
     </p>
     <p>Este site é destinado a todos os buscadores de conhecimento, sejam vocês seres humanos, 
       feiticeiros ou até mesmo seres de outras dimensões. Juntos, vamos expandir nossa compreensão 
-      do universo e descobrir maravilhas inimagináveis.
+      do universo e descobrir maravilhas inimagináveis. Além dos véus que ocultam a realidade,
+      navegaremos pelas fronteiras do conhecimento científico, compreendendo as leis que regem o cosmos.
+      Desvendaremos as Últimas descobertas, aqueles enigmas cósmicos que ecoam desde os primórdios do 
+      universo até os avanços que moldam o futuro.
     </p>
-    
+    <p>
 
 
   </body>
